feat: :sparkles: add get student closest to max grade endpoint
