# backend/config/routes.rb
@@ -8,10 +8,11 @@ Rails.application.routes.draw do
     scope module: :controllers do
       namespace :api do 
         namespace :v1 do
-          post "grades", to: "grades#create" # FEITO
+          post "grades", to: "grades#create"
           get "grades/students/:id", to: "grades#show" 
-          get "histories/students/:id", to: "histories#show" # FEITO
-          get "students", to: "students#index" # FEITO
+          get "histories/students/:id", to: "histories#show"
+          get "students", to: "students#index"
+          get "student", to: "students#show" # NÂO FEITO
         end
       end
     end
